--- a/SOLO/solo interface compilé 5/src/Makefile.am
+++ b/SOLO/solo interface compilé 5/src/Makefile.am
@@ -11,7 +11,8 @@ utilisateur_SOURCES = \
 	main.c \
 	support.c support.h \
 	interface.c interface.h \
-	callbacks.c callbacks.h
+	callbacks.c callbacks.h \
+	fonction.c fonction.h
 
 utilisateur_LDADD = @PACKAGE_LIBS@ $(INTLLIBS)
 
